# knwl

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_DI.md  alternative_di_approach.py  cli.py  di_examples_updated.py  inject_config_examples.py  knwl.py  logo.psd  modelfile  play.py  pyproject.toml  pytest.ini  test.py
.github/: branch-protection.json  copilot-instructions.md
.github/workflows/: publish.yml  test.yml
api/: main.py
api/models/: GraphRequest.py  JsonRequest.py
api/routes/: __init__.py
benchmarks/: README.md  benchmark.py  benchmark_utils.py  run.py
comparison/: README.md  run.py
docs/: dependency_injection.md
examples/: di_examples.py  di_extraction_example.py  formatting.py  formatting_demo.py  graph_extraction.py  quick_start.py
journal/: Benchmarks.md  CLI.md  Chunking.md  Configuration.md  Data.md  DependencyInjection.md  EntityExtraction.md  Graph.md  GraphExtraction.md  GraphLandscape.md  GraphRAG.md  GraphStorage.md  Install.md  KnwlNode.md  Neo4j.md  QuickStart.md  S3.md  SemanticGraph.md  Storage.md  index.md
knwl/: __init__.py  config.py  di.py  entities.py  framework_base.py  graphStorage.py  jsonStorage.py  knwl.py  llm.py  llm_cache.py  logging.py  prompt.py  services.py  settings.py  simple.py  tokenize.py  utils.py  vectorStorage.py  workspace.py
knwl/cli/: cli.py  (+5 more)
notebooks/: entities.ipynb  exploring.ipynb
tests/: field.graphml  fixtures.py  run.py  test_cache.py  test_chroma.py  test_chroma_storage.py  test_cli.py  test_config.py  test_config_helpers.py  test_di.py  test_document_store.py  test_entities.py  test_extraction.py  test_file_storage.py  test_formatting.py  test_global_strategy.py  test_graph_rag.py  test_graph_storage.py  test_hybrid_strategy.py  test_json_storage.py  test_keywords.py  test_keywords_strategy.py  test_knwl.py  test_llm.py  test_local_strategy.py  test_logging.py  test_models.py  test_naive_strategy.py  test_networkx.py  test_ollama.py  test_openai.py  test_prompts.py  test_rag_store.py  test_s3_storage.py  test_self_strategy.py  test_semantic_graph.py  test_services.py  test_simple.py  test_storage_adapter.py  test_strategy_base.py  (+7 more)
(+106 files in other folders)
