[project]
name = "knwl"
license = "MIT"
version = "1.8.3"
description = "A flexible Graph RAG package with advanced ingestion and augmentation strategies."
authors = [
    { name = "Francois Vanderseypen (Orbifold Consulting)", email = "swa@orbifold.net" }
]

readme = "README.md"

requires-python = ">=3.10,<3.13"

dependencies = [
   
    "networkx>=3.4.2",   
    "tiktoken>=0.8.0",
    "ollama>=0.4.7",
    "openai>=1.53.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "chromadb>=1.1.1",
    "anthropic>=0.72.0",
    "lxml>=6.0.2",
    "typer>=0.20.0"  
]

[dependency-groups]
dev = [
    "faker>=30.8.2",
    "jupyter>=1.1.1",
    "pytest-cov>=6.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "ipykernel>=6.30.1"
]
neo4j = [
    "neo4j>=6.0.2",
]
s3 = [
     "boto3>=1.42.30"
]
server = [
    "fastapi>=0.101.1",
    "uvicorn>=0.24.0"
]
extra = [
    "transformers>=4.46.1",
    "accelerate>=1.12.0",
    "rdflib>=7.5.0",
    "pydot>=4.0.1",
    "torch>=2.5.1"
]
collect = [
    "wikipedia-api>=0.8.1"
]
[project.urls]
Homepage = "https://github.com/Orbifold/knwl"
Repository = "https://github.com/Orbifold/knwl"
Documentation = "https://github.com/Orbifold/knwl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
knwl = "knwl.cli.cli:app"
tests="tests.run:main"
knwl-benchmark="benchmarks.run:main"
